# bixui

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: DoxygenConfig.cmake  FetchFmt.cmake  FetchGTest.cmake  FetchSpdlog.cmake  FetchTinyXml.cmake  GenDoc.cmake  ModuleHelpers.cmake
cmake/utils/: AddExtDependency.cmake  env_base.cmake.in  shadow_project.cmake.in
example/: CMakeLists.txt  example.manifest  frame_window.cpp  frame_window.h  main.cpp  manifest.rc  resources.h  resources.rc
include/bixlib/: assert.h  common.h  control_names.h  errors.h  export_macro.h  geometry.h  macro_define.h  macros.h
include/bixlib/animation/: animator.h  curve.h  property.h  states.h
include/bixlib/controls/: border.h  button.h  control.h  cursor.h  drawable.h  flex_layout.h  label.h  layout.h  length.h  linear_layout.h  switch.h
include/bixlib/core/: application.h  display.h  insets.h  layout_types.h  length.h  resource_manager.h  scene.h  widget_host.h  window.h  window_events.h  window_manager.h
include/bixlib/geometry/: corner_radii.h  ellipse.h  line.h  point.h  rect.h  rectangle.h  round_rect.h  shape.h  size.h
include/bixlib/graphics/: brush.h  canvas.h  color.h  colors.h  engine.h  pen.h  text_format.h  transform.h
include/bixlib/layout/: flex_layout.h  grid_layout.h  linear_layout.h
include/bixlib/render/: bitmap.h  brush.h  canvas.h  color.h  engine.h  pen.h  text_format.h  transform.h  unsafe.h
include/bixlib/utils/: color_literals.h  concepts.h  converter.h  flags.h  fmt_bix.h  fmt_wrapper.h  foreach.h  numeric.h
include/bixlib/widgets/: button.h  container.h  label.h  switch.h  view_parent.h  widget.h  widget_defs.h  widget_macros.h
include/bixlib/window/: screen.h  window.h  window_win.h
modules/animation/: animator.cpp  states.cpp
modules/controls/: flex_layout.cpp  label.cpp  layout.cpp  switch.cpp
modules/controls/drawable/: drawable.cpp
modules/core/: native_window.cpp  native_window.h  window_private.h
modules/core/win32/: display.cpp  display.h
modules/render/: color.cpp  renderer.cpp  transform.cpp
modules/render/d2d/: brush.cpp  brush.h  convert-inl.h  d2d_canvas.cpp  d2d_canvas.h  direct2d.h  engine.cpp  engine.h  pen.cpp  pen.h  text_format.cpp  text_format.h
resources/schema/: basic_attrs.xsd  controls.xsd  data_type.xsd  layouts.xsd  window.xsd
src/: CMakeLists.txt
src/animation/: property.cpp
src/controls/: flex_layout.cpp  label.cpp  switch.cpp
src/controls/drawable/: color_drawable.cpp  drawable.cpp
src/core/: CMakeLists.txt  interface.cpp  length.cpp
src/core/win32/: display.cpp  screen.h
src/graphics/: CMakeLists.txt  canvas.cpp  color.cpp  renderer.cpp  transform.cpp
src/graphics/d2d/: brush.cpp  brush.h  convert-inl.h  d2d_canvas.cpp  d2d_canvas.h  engine.cpp  engine.h  pen.cpp  pen.h  text_format.cpp  text_format.h
src/utils/: CMakeLists.txt  assert.cpp
src/widgets/: container.cpp  widget.cpp
src/window/: CMakeLists.txt  native_window.cpp  native_window.h  window.cpp  window_private.cpp  window_private.h
src/window/backends/win32/: class_manager.cpp  class_manager.h  win32_encoding.cpp  win32_encoding.h  win32_screen.cpp  win32_screen.h  win32_utils.cpp  win32_utils.h  win32_window.h
tests/: CMakeLists.txt  memory_sniffer.cpp  memory_sniffer.h
tests/graphics/: color_test.cpp
tests/utils/: flags_test.cpp  numeric_test.cpp
